# rocinante

./: NOTICE  README.md  controller.php  download.php  index.php  setup.php
cgi-bin/addon/: Makefile.in  configure  configure.ac
cgi-bin/dumper/: configure  configure.ac
cgi-bin/dumper/autom4te.cache/: output.0  requests  traces.0  traces.1
cgi-bin/dumper/src/: LangAnalyzer.cpp  LangAnalyzer.hpp  LuaAnalyzer.cpp  LuaAnalyzer.hpp  Makefile.am  Makefile.in  Util.hpp  dumper.cpp
css/: login.css  rocinante.css  rtable.css  setup.css
doc/Manual del traductor/: Manual del traductor Ed3.lyx
js/: jquery.langtable.js  jquery.raccordion.js  jquery.rtable.js  login.js  rocinante.js  setup.js
lang/br/: app.xml  codes.php
lang/en/: app.xml  codes.php  tips.php
lang/es/: app.xml  codes.php  tips.php
rocinante/command/: DefaultCommand.php  FrontController.php  GetAddonFileInfo.php  GetLocalization.php  RefreshSession.php  SelectMaintenanceMode.php  SessionRegistry.php  UpdateMaintenanceMode.php  Validation.php
rocinante/controller/: AppController.php  Command.php  Request.php  RequestRegistry.php
rocinante/mapper/: ClauseBuilder.php  DeletionFactory.php  SelectionFactory.php
rocinante/persistence/: DomainAssembler.php  Mapper.php  PersistenceFactory.php  SqlImport.php  SqlManager.php
rocinante/validator/: IsEmail.php  IsGender.php  IsMaxLength.php  IsMinLength.php  IsNonEmpty.php  IsNumeric.php  IsTaskType.php  IsUserType.php  Validator.php  ValidatorResolver.php
rocinante/view/: ViewHelper.php  admin.php  assigner_task_table.php  delete_task_admin_dialog.php  (+27 more)
(+203 files in other folders)
