# Process this file with autoconf to produce a configure script.

AC_INIT([dumper], [1.0])
AM_INIT_AUTOMAKE([subdir-objects])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
CXXFLAGS='-std=c++11 -O3'

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
